// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render with 0 expenses 1`] = `
<div>
  <p>
    Viewing 0 expenses
  </p>
</div>
`;

exports[`Should render with 1 expenses 1`] = `
<div>
  <p>
    Viewing 
    1
     expense
     totalling 
    $1.95
  </p>
</div>
`;

exports[`Should render with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expense
    s
     totalling 
    $1,141.95
  </p>
</div>
`;
